# aiida-finales

./: .pre-commit-config.yaml  Dockerfile  README.md  conftest.py  pyproject.toml
.docker/control/: cmdrun_build.sh  cmdrun_delete.sh  cmdrun_init.sh  cmdrun_start.sh  cmdrun_stop.sh
.github/workflows/: ci.yml
aiida_finale/: __init__.py
aiida_finale/calculations/: __init__.py
aiida_finale/cli/: __init__.py  client.py  root.py  test.py
aiida_finale/client/: __init__.py  connection_manager.py  schemas.py
aiida_finale/data/: __init__.py
aiida_finale/parsers/: __init__.py
aiida_finale/utils/: __init__.py
aiida_finale/workflows/: __init__.py
aiida_finales/: __init__.py
aiida_finales/calculations/: __init__.py  conductivity_estimation.py
aiida_finales/cli/: __init__.py  client.py  root.py  server.py  tenant.py  test.py
aiida_finales/client/: __init__.py  connection_manager.py  main.py
aiida_finales/data/: __init__.py
aiida_finales/engine/: __init__.py
aiida_finales/engine/client/: __init__.py  main.py  schemas.py
aiida_finales/engine/tenant/: __init__.py  main.py
aiida_finales/parsers/: __init__.py
aiida_finales/utils/: __init__.py  conductivity_estimator.py  create_request.py  create_result.py
aiida_finales/workflows/: __init__.py  conductivity_estimation.py
docs/source/: conf.py
examples/: __init__.py  client_config_local.yaml  client_config_remote.yaml  registration.json
examples/examples_set/: all_results.json  limitations.json  request.json
tests/: __init__.py
tests/cli/: __init__.py  test_cli.py
